--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,8 +1,8 @@
-m4trace:aclocal.m4:1068: -1- m4_include([m4/libtool.m4])
-m4trace:aclocal.m4:1069: -1- m4_include([m4/ltoptions.m4])
-m4trace:aclocal.m4:1070: -1- m4_include([m4/ltsugar.m4])
-m4trace:aclocal.m4:1071: -1- m4_include([m4/ltversion.m4])
-m4trace:aclocal.m4:1072: -1- m4_include([m4/lt~obsolete.m4])
+m4trace:aclocal.m4:1210: -1- m4_include([m4/libtool.m4])
+m4trace:aclocal.m4:1211: -1- m4_include([m4/ltoptions.m4])
+m4trace:aclocal.m4:1212: -1- m4_include([m4/ltsugar.m4])
+m4trace:aclocal.m4:1213: -1- m4_include([m4/ltversion.m4])
+m4trace:aclocal.m4:1214: -1- m4_include([m4/lt~obsolete.m4])
 m4trace:configure.ac:4: -1- AC_INIT([clogger], [1.0.0], [sahoorajesh.d@gmail.com], [clogger], [https://github.com/rajesh6115/loggerc])
 m4trace:configure.ac:4: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:4: -1- m4_pattern_forbid([_AC_])
@@ -154,7 +154,7 @@ m4trace:configure.ac:4: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:6: -1- AC_CONFIG_AUX_DIR([build-aux])
 m4trace:configure.ac:8: -1- AM_INIT_AUTOMAKE([1.11 -Wall -Werror ])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:8: -1- AM_AUTOMAKE_VERSION([1.11.6])
+m4trace:configure.ac:8: -1- AM_AUTOMAKE_VERSION([1.14.1])
 m4trace:configure.ac:8: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:8: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -215,7 +215,7 @@ m4trace:configure.ac:8: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:8: -1- AC_SUBST([MKDIR_P])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([MKDIR_P])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^MKDIR_P$])
-m4trace:configure.ac:8: -1- AC_SUBST([mkdir_p], ["$MKDIR_P"])
+m4trace:configure.ac:8: -1- AC_SUBST([mkdir_p], ['$(MKDIR_P)'])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([mkdir_p])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^mkdir_p$])
 m4trace:configure.ac:8: -1- AC_SUBST([AWK])
@@ -236,6 +236,22 @@ m4trace:configure.ac:8: -1- m4_pattern_allow([^am__tar$])
 m4trace:configure.ac:8: -1- AC_SUBST([am__untar])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([am__untar])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^am__untar$])
+m4trace:configure.ac:8: -1- AM_SILENT_RULES
+m4trace:configure.ac:8: -1- AC_SUBST([AM_V])
+m4trace:configure.ac:8: -1- AC_SUBST_TRACE([AM_V])
+m4trace:configure.ac:8: -1- m4_pattern_allow([^AM_V$])
+m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([AM_V])
+m4trace:configure.ac:8: -1- AC_SUBST([AM_DEFAULT_V])
+m4trace:configure.ac:8: -1- AC_SUBST_TRACE([AM_DEFAULT_V])
+m4trace:configure.ac:8: -1- m4_pattern_allow([^AM_DEFAULT_V$])
+m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([AM_DEFAULT_V])
+m4trace:configure.ac:8: -1- AC_SUBST([AM_DEFAULT_VERBOSITY])
+m4trace:configure.ac:8: -1- AC_SUBST_TRACE([AM_DEFAULT_VERBOSITY])
+m4trace:configure.ac:8: -1- m4_pattern_allow([^AM_DEFAULT_VERBOSITY$])
+m4trace:configure.ac:8: -1- AC_SUBST([AM_BACKSLASH])
+m4trace:configure.ac:8: -1- AC_SUBST_TRACE([AM_BACKSLASH])
+m4trace:configure.ac:8: -1- m4_pattern_allow([^AM_BACKSLASH$])
+m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([AM_BACKSLASH])
 m4trace:configure.ac:12: -1- AC_SUBST([CC])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([CC])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^CC$])
@@ -272,6 +288,7 @@ m4trace:configure.ac:12: -1- m4_pattern_allow([^EXEEXT$])
 m4trace:configure.ac:12: -1- AC_SUBST([OBJEXT], [$ac_cv_objext])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([OBJEXT])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^OBJEXT$])
+m4trace:configure.ac:12: -1- AC_REQUIRE_AUX_FILE([compile])
 m4trace:configure.ac:12: -1- AC_SUBST([DEPDIR], ["${am__leading_dot}deps"])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([DEPDIR])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^DEPDIR$])
@@ -313,11 +330,6 @@ m4trace:configure.ac:12: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
 m4trace:configure.ac:12: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
 m4trace:configure.ac:12: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
 m4trace:configure.ac:13: -1- AM_PROG_CC_C_O
-m4trace:configure.ac:13: -1- AC_DEFINE_TRACE_LITERAL([NO_MINUS_C_MINUS_O])
-m4trace:configure.ac:13: -1- m4_pattern_allow([^NO_MINUS_C_MINUS_O$])
-m4trace:configure.ac:13: -1- AH_OUTPUT([NO_MINUS_C_MINUS_O], [/* Define to 1 if your C compiler doesn\'t accept -c and -o together. */
-@%:@undef NO_MINUS_C_MINUS_O])
-m4trace:configure.ac:13: -1- AC_REQUIRE_AUX_FILE([compile])
 m4trace:configure.ac:15: -1- AC_CONFIG_HEADERS([config.h])
 m4trace:configure.ac:19: -1- AM_PROG_AR
 m4trace:configure.ac:19: -1- AC_REQUIRE_AUX_FILE([ar-lib])
